server: add login
add user login on server side,
save info about users to db

--- a/AlexeyMelentyevProject_ChatServer.Data/AlexeyMelentyevProject_ChatServer.Data.csproj
+++ b/AlexeyMelentyevProject_ChatServer.Data/AlexeyMelentyevProject_ChatServer.Data.csproj
@@ -52,7 +52,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\BaseEntity.cs" />
+    <Compile Include="Entities\ContactRelationship.cs" />
     <Compile Include="Entities\User.cs" />
+    <Compile Include="AmMessengerContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
