--- a/AlexeyMelentyevProject_ChatServer/AlexeyMelentyevProject_ChatServer.csproj
+++ b/AlexeyMelentyevProject_ChatServer/AlexeyMelentyevProject_ChatServer.csproj
@@ -54,6 +54,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client.cs" />
+    <Compile Include="Commands\Command.cs" />
+    <Compile Include="Commands\CommandAndData.cs" />
+    <Compile Include="Commands\CommandIdentifier.cs" />
+    <Compile Include="Commands\InitializeUser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerMessenger.cs" />
@@ -73,6 +77,7 @@
       <Name>Interfaces</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
