--- a/AlexeyMelentyevProject_ChatClient/AlexeyMelentyevProject_ChatClient.csproj
+++ b/AlexeyMelentyevProject_ChatClient/AlexeyMelentyevProject_ChatClient.csproj
@@ -102,8 +102,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Command\Commands.csproj">
-      <Project>{9cb0010f-eaef-4364-8918-ad25c012a7e0}</Project>
+    <ProjectReference Include="..\Commands\Commands.csproj">
+      <Project>{a184e004-8684-4937-b3ed-69fd028ca1f7}</Project>
       <Name>Commands</Name>
     </ProjectReference>
     <ProjectReference Include="..\Interfaces\Interfaces.csproj">
