--- a/AlexeyMelentyevProject_ChatClient/AlexeyMelentyevProject_ChatClient.csproj
+++ b/AlexeyMelentyevProject_ChatClient/AlexeyMelentyevProject_ChatClient.csproj
@@ -49,12 +49,20 @@
     <Compile Include="AmMessenger.cs" />
     <Compile Include="ClientSettings.cs" />
     <Compile Include="Commands\Command.cs" />
-    <Compile Include="Commands\CorrectLogin.cs" />
-    <Compile Include="Windows\AM_Chat.cs">
+    <Compile Include="Commands\FromServer\CorrectLogin.cs" />
+    <Compile Include="Commands\ToServer\AddContact.cs" />
+    <Compile Include="Commands\ToServer\GetConactList.cs" />
+    <Compile Include="Windows\AddContactForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Windows\AM_Chat.Designer.cs">
-      <DependentUpon>AM_Chat.cs</DependentUpon>
+    <Compile Include="Windows\AddContactForm.Designer.cs">
+      <DependentUpon>AddContactForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Windows\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Windows\MyControls\ContactControl.cs">
       <SubType>UserControl</SubType>
@@ -70,8 +78,11 @@
     <Compile Include="Windows\LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Windows\AM_Chat.resx">
-      <DependentUpon>AM_Chat.cs</DependentUpon>
+    <EmbeddedResource Include="Windows\AddContactForm.resx">
+      <DependentUpon>AddContactForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Windows\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Windows\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
