--- a/.gitignore
+++ b/.gitignore
@@ -72,8 +72,7 @@ mono_crash.*
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
+[Rr]elease/[Rr]eleases/
 x64/
 x86/
 [Aa][Rr][Mm]/
