--- a/AlexeyMelentyevProject_ChatClient/AlexeyMelentyevProject_ChatClient.csproj
+++ b/AlexeyMelentyevProject_ChatClient/AlexeyMelentyevProject_ChatClient.csproj
@@ -47,13 +47,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AmMessenger.cs" />
-    <Compile Include="ClientSettings.cs" />
-    <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\FromServer\CorrectLogin.cs" />
     <Compile Include="Commands\ToServer\AddContact.cs" />
     <Compile Include="Commands\ToServer\Connect.cs" />
     <Compile Include="Commands\ToServer\GetConactList.cs" />
-    <Compile Include="Commands\ToServer\Initializeuser.cs" />
+    <Compile Include="Commands\ToServer\Login.cs" />
     <Compile Include="Windows\AddContactForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +113,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AlexeyMelentyevProject_ChatServer.Data\AlexeyMelentyevProject_ChatServer.Data.csproj">
+      <Project>{8c3550ac-7528-4ae3-a2db-f2782503ea65}</Project>
+      <Name>AlexeyMelentyevProject_ChatServer.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Commands\Commands.csproj">
       <Project>{a184e004-8684-4937-b3ed-69fd028ca1f7}</Project>
       <Name>Commands</Name>
