--- a/AlexeyMelentyevProject_ChatServer/AlexeyMelentyevProject_ChatServer.csproj
+++ b/AlexeyMelentyevProject_ChatServer/AlexeyMelentyevProject_ChatServer.csproj
@@ -53,6 +53,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\FromClient\AddContact.cs" />
+    <Compile Include="Commands\FromClient\GetConactList.cs" />
     <Compile Include="Commands\FromClient\Login.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
