--- a/AlexeyMelentyevProject_ChatServer.Data/AlexeyMelentyevProject_ChatServer.Data.csproj
+++ b/AlexeyMelentyevProject_ChatServer.Data/AlexeyMelentyevProject_ChatServer.Data.csproj
@@ -56,8 +56,10 @@
   <ItemGroup>
     <Compile Include="Entities\BaseEntity.cs" />
     <Compile Include="Entities\ContactRelationship.cs" />
+    <Compile Include="Entities\MessageToUser.cs" />
     <Compile Include="Entities\User.cs" />
     <Compile Include="AmMessengerContext.cs" />
+    <Compile Include="MessagesJsonParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsersJsonParser.cs" />
   </ItemGroup>
