--- a/AlexeyMelentyevProject_ChatServer/AlexeyMelentyevProject_ChatServer.csproj
+++ b/AlexeyMelentyevProject_ChatServer/AlexeyMelentyevProject_ChatServer.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Commands\FromClient\AddContact.cs" />
     <Compile Include="Commands\FromClient\GetConactList.cs" />
     <Compile Include="Commands\FromClient\Login.cs" />
+    <Compile Include="Commands\FromClient\SendMessageToUser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerMessenger.cs" />
